# dnsforge

./: .gitignore  AGENTS.md  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/dnsforge/: main.go
dnsforge/: __init__.py  analyzer.py  cli.py  models.py  parser.py  reporter.py  validator.py
internal/benchmark/: benchmark.go
internal/lookup/: lookup.go  parse.go
internal/propagation/: propagation.go
internal/report/: report.go
internal/security/: security.go
tests/: dnsforge_test.go  test_analyzer.py  test_cli.py  test_parser.py  test_reporter.py  test_validator.py
