[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnsforge"
version = "0.1.0"
description = "DNS zone file parser, validator, analyzer, and converter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Edgar Ortega Ramirez" }]
keywords = ["dns", "zone-file", "validator", "parser", "analyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.0,<9",
    "rich>=13.0.0,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.5.0",
]

[project.scripts]
dnsforge = "dnsforge.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
